Update weird spacing between anchor and li tag that was preventing click

--- a/css/components/pagination.css
+++ b/css/components/pagination.css
@@ -13,9 +13,7 @@
 }
 
 .paginate__item {
-    /* display: inline-block; */
-    min-width: 32px;
-    padding: 5px 10px;
+    padding: 4px 0;
     font-style: normal;
     line-height: 20px;
     color: var(--color-fg-default);
@@ -28,6 +26,11 @@
     border: 1px solid transparent;
     border-radius: 6px;
     transition: border-color .2s cubic-bezier(0.3, 0, 0.5, 1);
+}
+
+.paginate__item a {
+    min-width: 32px;
+    padding: 5px 10px;
 }
 
 .paginate__item:has(a[aria-current]) {
